[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
rust-s3 = "0.31.0"
tokio = {version = "1.18.1", features = ["full"]}